--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hackathon-starter",
-  "version": "2.3.2",
+  "name": "outcanvas",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/hackathon-starter.git"
+    "url": "https://github.com/outcanvas/outcanvas.git"
   },
   "scripts": {
     "start": "node app.js",
@@ -26,7 +26,9 @@
     "express-session": "^1.6.1",
     "express-validator": "^2.3.0",
     "fbgraph": "^0.2.10",
+    "filesize": "^2.0.3",
     "github-api": "^0.7.0",
+    "i18n": "^0.5.0",
     "instagram-node": "^0.4.0",
     "jade": "^1.3.1",
     "lastfm": "^0.9.2",
@@ -34,10 +36,13 @@
     "lodash": "^2.4.1",
     "lusca": "^1.0.0",
     "method-override": "^2.1.0",
+    "mime": "^1.2.11",
+    "moment": "^2.8.1",
     "mongoose": "^3.8.12",
     "morgan": "^1.1.1",
     "node-foursquare": "^0.2.1",
     "node-linkedin": "^0.2.0",
+    "node-uuid": "^1.4.1",
     "nodemailer": "^1.0.1",
     "passport": "^0.2.0",
     "passport-facebook": "^1.0.3",
@@ -49,6 +54,7 @@
     "passport-oauth": "^1.0.0",
     "passport-twitter": "^1.0.2",
     "request": "^2.37.0",
+    "slug": "^0.5.0",
     "stripe": "^2.7.3",
     "tumblr.js": "^0.0.4",
     "twilio": "^1.6.0",
@@ -62,6 +68,9 @@
     "chai": "^1.9.1",
     "mocha": "^1.20.1",
     "multiline": "^0.3.4",
-    "supertest": "^0.13.0"
+    "supertest": "^0.13.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
